<resources>
    <string name="app_name">PBP Kelompok</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="username">Username</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="daftar">DAFTAR</string>
    <string name="register">Register</string>
</resources>