<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center">
            </TextView>

        </RelativeLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-170dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Existing EditText for Username -->
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:padding="28dp"
                android:drawableStart="@drawable/baseline_person_4_24"
                android:drawablePadding="20dp" />

            <!-- Existing EditText for Password -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:padding="28dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="20dp" />

            <!-- New EditText for Repeat Password -->
            <EditText
                android:id="@+id/etRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="textPassword"
                android:hint="@string/ulangi_password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:padding="28dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="20dp" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Full Name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:padding="28dp"
                android:drawableStart="@drawable/baseline_supervised_user_circle_24"
                android:drawablePadding="20dp" />

            <!-- New EditText for Role ID -->
            <EditText
                android:id="@+id/etRoleID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Role"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:padding="28dp"
                android:drawableStart="@drawable/baseline_build_circle_24"
                android:drawablePadding="20dp" />

            <!-- New EditText for Status -->
            <EditText
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Status"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:padding="28dp"
                android:drawableStart="@drawable/baseline_fact_check_24"
                android:drawablePadding="20dp" />

            <!-- Existing Button for Register -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/daftar"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
